--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "uno"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["William Wayland <w.g.wayland@gmail.com>"]
 
 [dependencies]
 rand = "0.7.2"
+colored = "1.9.0"
